feat: 修改package.json版本

--- a/package.json
+++ b/package.json
@@ -24,28 +24,38 @@
     "info": "node node_modules/@dcloudio/vue-cli-plugin-uni/commands/info.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-h5": "^2.0.0-alpha-24720191216028",
+    "@dcloudio/uni-app-plus": "^2.0.0-31620210325001",
+    "@dcloudio/uni-h5": "^2.0.0-31620210325001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-mp-qq": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-stat": "^2.0.0-v3-24020191018001",
+    "@dcloudio/uni-mp-360": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-kuaishou": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-qq": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-vue": "^2.0.0-31620210325001",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-31620210325001",
+    "@dcloudio/uni-quickapp-native": "^2.0.0-31620210325001",
+    "@dcloudio/uni-quickapp-webview": "^2.0.0-31620210325001",
+    "@dcloudio/uni-stat": "^2.0.0-31620210325001",
+    "@vue/shared": "^3.0.0",
+    "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@dcloudio/uni-cli-shared": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/uni-template-compiler": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-alpha-24720191216028",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-alpha-24720191216028",
+    "@babel/runtime": "~7.12.0",
+    "@dcloudio/types": "*",
+    "@dcloudio/uni-automator": "^2.0.0-31620210325001",
+    "@dcloudio/uni-cli-shared": "^2.0.0-31620210325001",
+    "@dcloudio/uni-template-compiler": "^2.0.0-31620210325001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-31620210325001",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-31620210325001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-31620210325001",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-31620210325001",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-31620210325001",
     "@types/html5plus": "*",
     "@types/uni-app": "*",
     "@vue/cli-plugin-babel": "3.5.1",
