--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@vue/cli-plugin-babel": "3.5.1",
     "@vue/cli-service": "^3.12.0",
     "babel-plugin-import": "^1.11.0",
+    "cross-env": "^7.0.2",
     "mini-types": "*",
     "miniprogram-api-typings": "^2.8.0-2",
     "node-sass": "^4.13.0",
