--- a/package.json
+++ b/package.json
@@ -1,96 +1,77 @@
 {
-  "name": "uni-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "uniapp-cli",
+  "version": "2.9.8-2020111010",
+  "private": false,
+  "displayName": "uni-app编译",
+  "__category": "App插件",
+  "__from": "HBuilderX",
+  "description": "uni-app编译到各端的编译器",
+  "keywords": [
+    "hbuilderx",
+    "uniapp"
+  ],
+  "author": "hbuilderx",
+  "license": "Copyright© DCloud Co.,Ltd",
+  "extensionDependencies": [
+    "npm",
+    "weapp-tools"
+  ],
   "scripts": {
-    "serve": "npm run dev:h5",
-    "build": "npm run build:h5",
-    "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
-    "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
-    "build:h5": "cross-env NODE_ENV=production UNI_PLATFORM=h5 vue-cli-service uni-build",
-    "build:mp-360": "cross-env NODE_ENV=production UNI_PLATFORM=mp-360 vue-cli-service uni-build",
-    "build:mp-alipay": "cross-env NODE_ENV=production UNI_PLATFORM=mp-alipay vue-cli-service uni-build",
-    "build:mp-baidu": "cross-env NODE_ENV=production UNI_PLATFORM=mp-baidu vue-cli-service uni-build",
-    "build:mp-kuaishou": "cross-env NODE_ENV=production UNI_PLATFORM=mp-kuaishou vue-cli-service uni-build",
-    "build:mp-qq": "cross-env NODE_ENV=production UNI_PLATFORM=mp-qq vue-cli-service uni-build",
-    "build:mp-toutiao": "cross-env NODE_ENV=production UNI_PLATFORM=mp-toutiao vue-cli-service uni-build",
-    "build:mp-weixin": "cross-env NODE_ENV=production UNI_PLATFORM=mp-weixin vue-cli-service uni-build",
-    "build:quickapp-native": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-native vue-cli-service uni-build",
-    "build:quickapp-webview": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview vue-cli-service uni-build",
-    "build:quickapp-webview-huawei": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview-huawei vue-cli-service uni-build",
-    "build:quickapp-webview-union": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview-union vue-cli-service uni-build",
-    "dev:app-plus": "cross-env NODE_ENV=development UNI_PLATFORM=app-plus vue-cli-service uni-build --watch",
-    "dev:custom": "cross-env NODE_ENV=development uniapp-cli custom",
-    "dev:h5": "cross-env NODE_ENV=development UNI_PLATFORM=h5 vue-cli-service uni-serve",
-    "dev:mp-360": "cross-env NODE_ENV=development UNI_PLATFORM=mp-360 vue-cli-service uni-build --watch",
-    "dev:mp-alipay": "cross-env NODE_ENV=development UNI_PLATFORM=mp-alipay vue-cli-service uni-build --watch",
-    "dev:mp-baidu": "cross-env NODE_ENV=development UNI_PLATFORM=mp-baidu vue-cli-service uni-build --watch",
-    "dev:mp-kuaishou": "cross-env NODE_ENV=development UNI_PLATFORM=mp-kuaishou vue-cli-service uni-build --watch",
-    "dev:mp-qq": "cross-env NODE_ENV=development UNI_PLATFORM=mp-qq vue-cli-service uni-build --watch",
-    "dev:mp-toutiao": "cross-env NODE_ENV=development UNI_PLATFORM=mp-toutiao vue-cli-service uni-build --watch",
-    "dev:mp-weixin": "cross-env NODE_ENV=development UNI_PLATFORM=mp-weixin vue-cli-service uni-build --watch",
-    "dev:quickapp-native": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-native vue-cli-service uni-build --watch",
-    "dev:quickapp-webview": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview vue-cli-service uni-build --watch",
-    "dev:quickapp-webview-huawei": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview-huawei vue-cli-service uni-build --watch",
-    "dev:quickapp-webview-union": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview-union vue-cli-service uni-build --watch",
-    "info": "node node_modules/@dcloudio/vue-cli-plugin-uni/commands/info.js",
-    "serve:quickapp-native": "node node_modules/@dcloudio/uni-quickapp-native/bin/serve.js",
-    "test:android": "cross-env UNI_PLATFORM=app-plus UNI_OS_NAME=android jest -i",
-    "test:h5": "cross-env UNI_PLATFORM=h5 jest -i",
-    "test:ios": "cross-env UNI_PLATFORM=app-plus UNI_OS_NAME=ios jest -i",
-    "test:mp-baidu": "cross-env UNI_PLATFORM=mp-baidu jest -i",
-    "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build:mp-weixin": "set NODE_ENV=production&& set UNI_PLATFORM=mp-weixin&& set UNI_OUTPUT_DIR=./dist/build/mp-weixin&& node ./bin/uniapp-cli.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-31920210609001",
-    "@dcloudio/uni-h5": "^2.0.0-31920210609001",
-    "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-360": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-kuaishou": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-qq": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-vue": "^2.0.0-31920210609001",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-31920210609001",
-    "@dcloudio/uni-quickapp-native": "^2.0.0-31920210609001",
-    "@dcloudio/uni-quickapp-webview": "^2.0.0-31920210609001",
-    "@dcloudio/uni-stat": "^2.0.0-31920210609001",
-    "@vue/shared": "^3.0.0",
-    "core-js": "^3.6.5",
-    "flyio": "^0.6.2",
-    "regenerator-runtime": "^0.12.1",
-    "vue": "^2.6.11",
-    "vuex": "^3.2.0"
-  },
-  "devDependencies": {
-    "@babel/runtime": "~7.12.0",
-    "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "^2.0.0-31920210609001",
-    "@dcloudio/uni-cli-shared": "^2.0.0-31920210609001",
-    "@dcloudio/uni-migration": "^2.0.0-31920210609001",
-    "@dcloudio/uni-template-compiler": "^2.0.0-31920210609001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-31920210609001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-31920210609001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-31920210609001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-31920210609001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-31920210609001",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@babel/plugin-syntax-typescript": "^7.2.0",
+    "@dcloudio/types": "^2.0.17",
+    "@dcloudio/uni-app-plus": "^2.0.0-29820201110001",
+    "@dcloudio/uni-automator": "^2.0.0-29820201110001",
+    "@dcloudio/uni-cli-shared": "^2.0.0-29820201110001",
+    "@dcloudio/uni-h5": "^2.0.0-29820201110001",
+    "@dcloudio/uni-migration": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-360": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-qq": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-29820201110001",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-29820201110001",
+    "@dcloudio/uni-quickapp-webview": "^2.0.0-29820201110001",
+    "@dcloudio/uni-stat": "^2.0.0-29820201110001",
+    "@dcloudio/uni-template-compiler": "^2.0.0-29820201110001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-29820201110001",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-29820201110001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-29820201110001",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-29820201110001",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-29820201110001",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-typescript": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
     "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
-    "mini-types": "*",
-    "miniprogram-api-typings": "*",
+    "caniuse-lite": "^1.0.30001157",
+    "flyio": "^0.6.2",
+    "less-loader": "^4.1.0",
+    "module-alias": "^2.1.0",
     "postcss-comment": "^2.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "postcss-px-to-viewport": "^1.1.1",
+    "pug-plain-loader": "^1.0.0",
+    "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^8.0.2",
+    "stylus-loader": "^3.0.2",
+    "vue": "^2.6.11",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.2.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.0.1"
   },
+  "devDependencies": {},
   "browserslist": [
     "Android >= 4",
     "ios >= 8"
   ],
-  "uni-app": {
-    "scripts": {}
+  "_moduleAliases": {
+    "typescript": "./compile-typescript/node_modules/typescript",
+    "less": "./compile-less/node_modules/less",
+    "node-sass": "./compile-node-sass/node_modules/node-sass-china",
+    "stylus": "./compile-stylus/node_modules/stylus"
   }
 }
