--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,26 @@
 {
+  "references":[],
   "compilerOptions": {
-    "types": [
-      "uni-app",
-      "html5plus",
-      "miniprogram-api-typings/types/lib.wx.api.d.ts",
-      "mini-types/types/api"
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "experimentalDecorators":true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "unpackage",
+    "src/**/*.nvue"
+  ]
 }
