--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uniapp-template",
-  "version": "2.9.8-2020111010",
+  "version": "3.2.11",
   "private": false,
   "displayName": "uni-app编译",
   "extensionDependencies": [
@@ -15,26 +15,26 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-typescript": "^7.2.0",
-    "@dcloudio/types": "^2.0.17",
-    "@dcloudio/uni-app-plus": "^2.0.0-29820201110001",
-    "@dcloudio/uni-automator": "^2.0.0-29820201110001",
-    "@dcloudio/uni-cli-shared": "^2.0.0-29820201110001",
-    "@dcloudio/uni-h5": "^2.0.0-29820201110001",
-    "@dcloudio/uni-migration": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-360": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-qq": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-29820201110001",
-    "@dcloudio/uni-quickapp-webview": "^2.0.0-29820201110001",
-    "@dcloudio/uni-stat": "^2.0.0-29820201110001",
-    "@dcloudio/uni-template-compiler": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-29820201110001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-29820201110001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-29820201110001",
+    "@dcloudio/uni-app-plus": "^2.0.1-32920211122003",
+    "@dcloudio/uni-automator": "^2.0.1-32920211122003",
+    "@dcloudio/uni-cli-shared": "^2.0.1-32920211122003",
+    "@dcloudio/uni-h5": "^2.0.1-32920211122003",
+    "@dcloudio/uni-migration": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-360": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-alipay": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-baidu": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-qq": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-toutiao": "^2.0.1-32920211122003",
+    "@dcloudio/uni-mp-weixin": "^2.0.1-32920211122003",
+    "@dcloudio/uni-quickapp-webview": "^2.0.1-32920211122003",
+    "@dcloudio/uni-stat": "^2.0.1-32920211122003",
+    "@dcloudio/uni-template-compiler": "^2.0.1-32920211122003",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.1-32920211122003",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.1-32920211122003",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.1-32920211122003",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.1-32920211122003",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.1-32920211122003",
+    "@dcloudio/uni-helper-json": "*",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-typescript": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
@@ -56,7 +56,11 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@babel/runtime": "~7.12.0",
+    "@dcloudio/types": "*",
+    "cross-env": "^7.0.3",
+    "miniprogram-api-typings": "*",
+    "mini-types": "*"
   },
   "browserslist": [
     "Android >= 4",
