--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.1-32920211122003",
     "@dcloudio/webpack-uni-mp-loader": "^2.0.1-32920211122003",
     "@dcloudio/webpack-uni-pages-loader": "^2.0.1-32920211122003",
+    "@dcloudio/uni-cli-i18n": "*",
     "@dcloudio/uni-helper-json": "*",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-typescript": "~4.2.0",
