--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uniapp-template",
-  "version": "2.9.8-2020111010",
+  "version": "3.2.16-2021112000",
   "private": false,
   "displayName": "uni-app编译",
   "extensionDependencies": [
@@ -15,31 +15,37 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-typescript": "^7.2.0",
-    "@dcloudio/types": "^2.0.17",
-    "@dcloudio/uni-app-plus": "^2.0.0-29820201110001",
-    "@dcloudio/uni-automator": "^2.0.0-29820201110001",
-    "@dcloudio/uni-cli-shared": "^2.0.0-29820201110001",
-    "@dcloudio/uni-h5": "^2.0.0-29820201110001",
-    "@dcloudio/uni-migration": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-360": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-qq": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-29820201110001",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-29820201110001",
-    "@dcloudio/uni-quickapp-webview": "^2.0.0-29820201110001",
-    "@dcloudio/uni-stat": "^2.0.0-29820201110001",
-    "@dcloudio/uni-template-compiler": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-29820201110001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-29820201110001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-29820201110001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-29820201110001",
+    "@dcloudio/types": "^2.5.13",
+    "@dcloudio/uni-app-plus": "^2.0.0-32920211119001",
+    "@dcloudio/uni-automator": "^2.0.0-32920211119001",
+    "@dcloudio/uni-cli-i18n": "^2.0.0-32920211119001",
+    "@dcloudio/uni-cli-shared": "^2.0.0-32920211119001",
+    "@dcloudio/uni-h5": "^2.0.0-32920211119001",
+    "@dcloudio/uni-i18n": "^2.0.0-32920211119001",
+    "@dcloudio/uni-migration": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-360": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-kuaishou": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-lark": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-qq": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-vue": "^2.0.0-32920211119001",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-32920211119001",
+    "@dcloudio/uni-quickapp-webview": "^2.0.0-32920211119001",
+    "@dcloudio/uni-stat": "^2.0.0-32920211119001",
+    "@dcloudio/uni-template-compiler": "^2.0.0-32920211119001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-32920211119001",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-32920211119001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-32920211119001",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-32920211119001",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-32920211119001",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-typescript": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "@vue/shared": "^3.1.5",
     "babel-plugin-import": "^1.11.0",
-    "caniuse-lite": "^1.0.30001157",
+    "caniuse-lite": "^1.0.30001282",
     "flyio": "^0.6.2",
     "less-loader": "^4.1.0",
     "module-alias": "^2.1.0",
@@ -51,6 +57,7 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
+    "vue-i18n": "^8.24.1",
     "vue-property-decorator": "^7.2.0",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.0.1"
